--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,12 @@
 # tox.ini
 [tox]
-envlist = py27
+envlist = py27,py34,py35
 
 [testenv]
 deps =
     pytest
     pytest-cov
     mock
+    hubstorage
 commands =
     py.test --cov=sh_scrapy --cov-report=
