Backward compatibility fixes for Scrapy=1.0.5

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 # tox.ini
 [tox]
-envlist = py27,py34,py35
+envlist = py27, py34, py35, py27-scrapy105
 
 [testenv]
 deps =
@@ -8,5 +8,6 @@ deps =
     pytest-cov
     mock
     hubstorage
+    py27-scrapy105: Scrapy==1.0.5
 commands =
     py.test --cov=sh_scrapy --cov-report=
