Trying to improve Tox testing

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 # tox.ini
 [tox]
-envlist = py27,py34,py35
+envlist = py{27,34,35}-scrapy{105, 111}
 
 [testenv]
 deps =
@@ -8,5 +8,6 @@ deps =
     pytest-cov
     mock
     hubstorage
+    py{27,34,35}: Scrapy=1.0.5
 commands =
     py.test --cov=sh_scrapy --cov-report=
