Update entrypoint to use new Scrapinghub interface
Use named pipe located in the job container to send data to Scrapinghub
backend.

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ deps =
     pytest-cov
     mock
     hubstorage
+    six
     py27-scrapy105: Scrapy==1.0.5
 commands =
     py.test --cov=sh_scrapy --cov-report=
