Add classifiers, add builds for py36

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 # tox.ini
 [tox]
-envlist = py27, py34, py35, py27-scrapy105
+envlist = py27, py27-scrapy105, py33, py34, py35, py36
 
 [testenv]
 deps =
