--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,6 @@ deploy:
   user: scrapinghub
   on:
     tags: true
-    condition: $TOXENV == py27 && $TRAVIS_TAG =~ ^[0-9]+[.][0-9]+[.][0-9]+(rc[0-9]+|[.]dev[0-9]+)?$
+    condition: $TOXENV == py27 && $TRAVIS_TAG =~ ^v[0-9]+[.][0-9]+[.][0-9]+(rc[0-9]+|[.]dev[0-9]+)?$
   password:
     secure: 05NUQdIRHlT+9T85SJXWfg35q3bk7vlpkfHfwisDkbcJnD5+kymRTzbSzhABQxh3bpc0QHRc2bF1PfgCjumaJMarp3K0unsOdptleUwhorizkyvnD8xzxWd+8GFUDBzoCLJqC9TQK05wWrTqbGbZ+stPnatEx7SfJEHbxhKeL7M=
