--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ deps =
     pytest-cov
     mock
     hubstorage
-    six
+    six>=1.5.2
     py27-scrapy105: Scrapy==1.0.5
 commands =
     py.test --cov=sh_scrapy --cov-report=
