Support passing positional parameters to tox

--- a/tox.ini
+++ b/tox.ini
@@ -11,4 +11,4 @@ deps =
     six
     py27-scrapy105: Scrapy==1.0.5
 commands =
-    py.test --cov=sh_scrapy --cov-report=
+    py.test --cov=sh_scrapy --cov-report= {posargs:}
