Migrate CI to GH Actions

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 # tox.ini
 [tox]
-envlist = py27, py27-scrapy105, py35, py36
+envlist = py27, py27-scrapy105, py36, py37, py38, py39, py310
 
 [testenv]
 deps =
@@ -11,4 +11,4 @@ deps =
     six
     py27-scrapy105: Scrapy==1.0.5
 commands =
-    py.test --cov=sh_scrapy --cov-report= {posargs:}
+    pytest --verbose --cov=sh_scrapy --cov-report=term-missing --cov-report=html --cov-report=xml {posargs: sh_scrapy tests}
