CI: fail-fast=false

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,6 +7,7 @@ jobs:
     name: "Test: py${{ matrix.python-version }}, Ubuntu"
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         include:
         - python-version: "2.7"
