Remove py310 CI job

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 # tox.ini
 [tox]
-envlist = py27, py27-scrapy105, py36, py37, py38, py39, py310
+envlist = py27, py27-scrapy105, py35, py36, py37, py38, py39, py310
 
 [testenv]
 deps =
