--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ deps =
     mock
     hubstorage
     six
+    packaging
     py35-scrapy18: Scrapy==1.8
 commands =
     pytest --verbose --cov=sh_scrapy --cov-report=term-missing --cov-report=html --cov-report=xml {posargs: sh_scrapy tests}
