--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 # tox.ini
 [tox]
-envlist = py35-scrapy18, py35, py36, py37, py38, py39, py310
+envlist = py35-scrapy18, py35, py36, py37, py38, py39
 
 [testenv]
 deps =
