Drop py35 support, test in py310

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 # tox.ini
 [tox]
-envlist = py35-scrapy18, py35, py36, py37, py38, py39
+envlist = py36-scrapy16, py
 
 [testenv]
 deps =
@@ -10,6 +10,6 @@ deps =
     hubstorage
     six
     packaging
-    py35-scrapy18: Scrapy==1.8
+    py36-scrapy16: Scrapy==1.6
 commands =
     pytest --verbose --cov=sh_scrapy --cov-report=term-missing --cov-report=html --cov-report=xml {posargs: sh_scrapy tests}
