--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,24 +10,24 @@ jobs:
       fail-fast: false
       matrix:
         include:
-        - python-version: "3.5"
-          env:
-            TOXENV: py35-scrapy18
-        - python-version: "3.5"
-          env:
-            TOXENV: py35
         - python-version: "3.6"
           env:
-            TOXENV: py36
+            TOXENV: py36-scrapy16
+        - python-version: "3.6"
+          env:
+            TOXENV: py
         - python-version: "3.7"
           env:
-            TOXENV: py37
+            TOXENV: py
         - python-version: "3.8"
           env:
-            TOXENV: py38
+            TOXENV: py
         - python-version: "3.9"
           env:
-            TOXENV: py39
+            TOXENV: py
+        - python-version: "3.10"
+          env:
+            TOXENV: py
 
     steps:
     - uses: actions/checkout@v2
