--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,27 +5,33 @@ on: [push, pull_request]
 jobs:
   tests-ubuntu:
     name: "Test: py${{ matrix.python-version }}, Ubuntu"
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         include:
         - python-version: "3.6"
+          os: ubuntu-20.04
           env:
             TOXENV: py36-scrapy16
         - python-version: "3.6"
+          os: ubuntu-20.04
           env:
             TOXENV: py
         - python-version: "3.7"
+          os: ubuntu-latest
           env:
             TOXENV: py
         - python-version: "3.8"
+          os: ubuntu-latest
           env:
             TOXENV: py
         - python-version: "3.9"
+          os: ubuntu-latest
           env:
             TOXENV: py
         - python-version: "3.10"
+          os: ubuntu-latest
           env:
             TOXENV: py
 
