--- a/tox.ini
+++ b/tox.ini
@@ -10,5 +10,7 @@ deps =
     hubstorage
     packaging
     py36-scrapy16: Scrapy==1.6
+    scrapy-spider-metadata; python_version >= "3.8"
+
 commands =
     pytest --verbose --cov=sh_scrapy --cov-report=term-missing --cov-report=html --cov-report=xml {posargs: sh_scrapy tests}
