Add tests for retrieving spider params schema.

--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,7 @@ deps =
     packaging
     py36-scrapy16: Scrapy==1.6
     scrapy-spider-metadata>=0.1.1; python_version >= "3.8"
+    pydantic>=2; python_version >= "3.8"
 
 commands =
     pytest --verbose --cov=sh_scrapy --cov-report=term-missing --cov-report=html --cov-report=xml {posargs: sh_scrapy tests}
