--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,12 +34,20 @@ jobs:
           os: ubuntu-latest
           env:
             TOXENV: py
+        - python-version: "3.11"
+          os: ubuntu-latest
+          env:
+            TOXENV: py
+        - python-version: "3.12"
+          os: ubuntu-latest
+          env:
+            TOXENV: py
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
 
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
 
