Rely on centralized request fingerprints on Scrapy 2.7 and higher

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,9 @@
 # tox.ini
 [tox]
 envlist = py36-scrapy16, py
+requires =
+    # https://github.com/pypa/virtualenv/issues/2550
+    virtualenv<=20.21.1
 
 [testenv]
 deps =
