--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -61,4 +61,6 @@ jobs:
       run: tox
 
     - name: Upload coverage report
-      run: bash <(curl -s https://codecov.io/bash)
+      uses: codecov/codecov-action@v5
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
