--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,7 +19,7 @@ jobs:
           env:
             TOXENV: py
         - python-version: "3.7"
-          os: ubuntu-latest
+          os: ubuntu-22.04
           env:
             TOXENV: py
         - python-version: "3.8"
