--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -42,12 +42,16 @@ jobs:
           os: ubuntu-latest
           env:
             TOXENV: py
+        - python-version: "3.13"
+          os: ubuntu-latest
+          env:
+            TOXENV: py
 
     steps:
     - uses: actions/checkout@v4
 
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
 
