--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,7 +19,7 @@ jobs:
           env:
             TOXENV: py
         - python-version: "3.7"
-          os: ubuntu-latest
+          os: ubuntu-22.04
           env:
             TOXENV: py
         - python-version: "3.8"
@@ -42,12 +42,16 @@ jobs:
           os: ubuntu-latest
           env:
             TOXENV: py
+        - python-version: "3.13"
+          os: ubuntu-latest
+          env:
+            TOXENV: py
 
     steps:
     - uses: actions/checkout@v4
 
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
 
@@ -61,4 +65,6 @@ jobs:
       run: tox
 
     - name: Upload coverage report
-      run: bash <(curl -s https://codecov.io/bash)
+      uses: codecov/codecov-action@v5
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
