Remove support for Python 3.6

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 # tox.ini
 [tox]
-envlist = py36-scrapy16, py
+envlist = py-scrapy16, py
 requires =
     # https://github.com/pypa/virtualenv/issues/2550
     virtualenv<=20.21.1
@@ -12,7 +12,7 @@ deps =
     mock
     hubstorage
     packaging
-    py36-scrapy16: Scrapy==1.6
+    py-scrapy16: Scrapy==1.6
     scrapy-spider-metadata>=0.1.1; python_version >= "3.8"
     pydantic>=2; python_version >= "3.8"
 
