--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,14 +10,10 @@ jobs:
       fail-fast: false
       matrix:
         include:
-        - python-version: "3.6"
-          os: ubuntu-20.04
+        - python-version: "3.7"
+          os: ubuntu-22.04
           env:
-            TOXENV: py36-scrapy16
-        - python-version: "3.6"
-          os: ubuntu-20.04
-          env:
-            TOXENV: py
+            TOXENV: py-scrapy16
         - python-version: "3.7"
           os: ubuntu-22.04
           env:
