Pin twisted for py-scrapy16 env

--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,7 @@ deps =
     hubstorage
     packaging
     py-scrapy16: Scrapy==1.6
+    py-scrapy16: Twisted==19.10.0
     scrapy-spider-metadata>=0.1.1; python_version >= "3.8"
     pydantic>=2; python_version >= "3.8"
 
