--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,40 +10,32 @@ jobs:
       fail-fast: false
       matrix:
         include:
-        - python-version: "3.6"
-          os: ubuntu-20.04
-          env:
-            TOXENV: py36-scrapy16
-        - python-version: "3.6"
-          os: ubuntu-20.04
-          env:
-            TOXENV: py
-        - python-version: "3.7"
+        - python-version: "3.8"
           os: ubuntu-22.04
           env:
-            TOXENV: py
+            TOXENV: py-scrapy16
         - python-version: "3.8"
-          os: ubuntu-latest
+          os: ubuntu-24.04
           env:
             TOXENV: py
         - python-version: "3.9"
-          os: ubuntu-latest
+          os: ubuntu-24.04
           env:
             TOXENV: py
         - python-version: "3.10"
-          os: ubuntu-latest
+          os: ubuntu-24.04
           env:
             TOXENV: py
         - python-version: "3.11"
-          os: ubuntu-latest
+          os: ubuntu-24.04
           env:
             TOXENV: py
         - python-version: "3.12"
-          os: ubuntu-latest
+          os: ubuntu-24.04
           env:
             TOXENV: py
         - python-version: "3.13"
-          os: ubuntu-latest
+          os: ubuntu-24.04
           env:
             TOXENV: py
 
