CI: update pinned reqs env

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 # tox.ini
 [tox]
-envlist = py-scrapy16, py
+envlist = py-scrapy27, py
 requires =
     # https://github.com/pypa/virtualenv/issues/2550
     virtualenv<=20.21.1
@@ -12,10 +12,10 @@ deps =
     mock
     hubstorage
     packaging
-    py-scrapy16: Scrapy==1.6
-    py-scrapy16: Twisted==19.10.0
-    scrapy-spider-metadata>=0.1.1; python_version >= "3.8"
-    pydantic>=2; python_version >= "3.8"
+    py-scrapy27: Scrapy==2.7
+    py-scrapy27: Twisted==19.10.0
+    scrapy-spider-metadata>=0.1.1
+    pydantic>=2
 
 commands =
     pytest --verbose --cov=sh_scrapy --cov-report=term-missing --cov-report=html --cov-report=xml {posargs: sh_scrapy tests}
