Use crawler-based tests for disk quota middlewares

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 # tox.ini
 [tox]
-envlist = py-scrapy27, py
+envlist = py-scrapy27,py,asyncio
 requires =
     # https://github.com/pypa/virtualenv/issues/2550
     virtualenv<=20.21.1
@@ -19,4 +19,8 @@ deps =
     pydantic>=2
 
 commands =
-    pytest --verbose --cov=sh_scrapy --cov-report=term-missing --cov-report=html --cov-report=xml {posargs: sh_scrapy tests}
+    pytest --reactor=default --verbose --cov=sh_scrapy --cov-report=term-missing --cov-report=html --cov-report=xml {posargs: sh_scrapy tests}
+
+[testenv:asyncio]
+commands =
+    pytest --reactor=asyncio --verbose --cov=sh_scrapy --cov-report=term-missing --cov-report=html --cov-report=xml {posargs: sh_scrapy tests}
