--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,6 +30,10 @@ jobs:
           os: ubuntu-24.04
           env:
             TOXENV: py
+        - python-version: "3.13"
+          os: ubuntu-24.04
+          env:
+            TOXENV: asyncio
 
     steps:
     - uses: actions/checkout@v4
