--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,21 @@
+[tool.bumpversion]
+current_version = "0.18.0"
+commit = true
+tag = true
+tag_name = "v{new_version}"
+
+[[tool.bumpversion.files]]
+filename = "CHANGES.rst"
+search = "\\(unreleased\\)$"
+replace = "({now:%Y-%m-%d})"
+regex = true
+
+[[tool.bumpversion.files]]
+filename = "setup.py"
+
+[[tool.bumpversion.files]]
+filename = "sh_scrapy/__init__.py"
+
 [tool.pytest.ini_options]
 filterwarnings = [
     # https://github.com/scrapinghub/python-scrapinghub/commit/d1d3df0db5be926999ab71086f83ae8a7120e781
