--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,8 +19,10 @@ jobs:
       - uses: actions/setup-python@v6
         with:
           python-version: "3.13"
-      - run: |
-          python -m pip install --upgrade build
-          python -m build
       - name: Publish to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
+        run: |
+          python -m pip install --upgrade build twine
+          python -m build
+          export TWINE_USERNAME=__token__
+          export TWINE_PASSWORD=${{ secrets.PYPI_TOKEN }}
+          twine upload dist/*
